--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
       loadSidebar: true,  //侧边栏  _sidebar.md
       subMaxLevel: 3, //根据 readme.md文件中 # 标题来显示侧边栏，这里数值是多少，就显示多少层级
       search: {
-        paths: [
-          '/',
-        'SqlSugar/数据库特色/SqlServer',
-        ], // [] or 'auto' 自动
+        paths:'auto',
+        // paths: [
+        //   '/',
+        // 'SqlSugar/数据库特色/SqlServer',
+        // ], // [] or 'auto' 自动
         placeholder: '🔍 搜索', //搜索框提示
         noData: '找不到结果',
         depth: 6,
