--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="guide/css/vue.css">
 
   <!--  夜间切换 -->
   <link rel="stylesheet" href="guide/css/docsify-darklight-theme.min.css"/>
@@ -71,6 +71,29 @@
         style: 'text-align: left;',
       },
 
+      plugins: [
+      //  评论功能参考：https://github.com/TaQini/docsify-livere
+      function (hook, vm) {
+        // load livere
+        hook.beforeEach(function(content) {
+                var comment = "<div id='lv-container' data-id='city' data-uid='MTAyMC81NjQyMy8zMjg4Ng=='></div>\n\n----\n"
+                // '<h1>评论</h1> 没有显示评论区？点击<a href="javascript:location.reload();">刷新</a>试试:D '
+                return content + comment;
+            });
+            
+        hook.doneEach(function() {
+             (function(d, s) {
+                 var j, e = d.getElementsByTagName(s)[0];
+                 if (typeof LivereTower === 'function') { return; }
+                 j = d.createElement(s);
+                 j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+                 j.async = true;
+                 e.parentNode.insertBefore(j, e);
+             })(document, 'script');
+          });
+      },
+      ],
+
       // markdown: {
       //   renderer: {
       //     code: function(code, lang, base=null) {
@@ -120,13 +143,13 @@
 
   </script>
   <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="guide/js/docsify.js"></script>
 
   <!-- 全文搜索的引用 -->
   <script src="guide/js/search.min.js"></script>
 
   <!-- 全文搜索高亮显示 -->
-  <script src="guide/js/highlight.js"></script>
+  <!-- <script src="guide/js/highlight.js"></script> -->
 
   <!-- 夜间切换 -->
   <script src="guide/js/docsify-darklight-theme.js"></script>
@@ -193,8 +216,8 @@
 </script>
 
 <!-- 回到顶部功能 -->
-<script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/jquery.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/jquery.goup.js"></script>
+<script src="guide/js/jquery.js"></script>
+<script src="guide/js/jquery.goup.js"></script>
 <script type="text/javascript">
   $(document).ready(function () {
     $.goup({
@@ -210,12 +233,11 @@
 
 
 <!-- 谷歌分析 -->
-<script src="https://cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
+<script src="guide/js/ga.min.js"></script>
 
 <!-- 代码块样式优化-->
-<!-- <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script> -->
-<script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/prism-c.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-csharp.min.js"></script>
+<script src="guide/js/prism-c.js"></script>
+<script src="guide/js/prism-csharp.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/prism-css.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/prism-sql.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/prism-markdown.js"></script>
