导航样式添加到index.html，并且标题分层级显示

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
       border-radius: 2px;
     }
 
+    .NavigateDiv{
+        position: fixed;
+        left: 92%;
+        top: 12%;
+        font-size:15px;
+        border-width: 1px;
+        padding: 8px;
+        border-style: solid;
+        width:180px;
+    }
+   
+
   </style>
 </head>
 
