--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>DotNeter-Hpf\'s  Blog</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -33,11 +33,12 @@
       border-radius: 2px;
     }
 
+    /* 右侧导航栏 */
     .NavigateDiv{
         position: fixed;
-        left: 92%;
+        left: 90%;
         top: 12%;
-        font-size:15px;
+        font-size:13px;
         border-width: 1px;
         padding: 8px;
         border-style: solid;
