--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       color: rgb(239, 112, 96);
     }
 
-    h1,h2,h3,h4,h5,h6 span{
+    h2,h3,h4,h5,h6 span{
       display:inline-block;
       background: rgb(66, 185, 131);
       color:#ffffff;
