--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>DotNeter-Hpf\'s  Blog</title>
+  <title>DotNeter-Hpf's  Blog</title>
   <link rel="icon" href="guide/images/TabIcon1.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
@@ -175,7 +175,7 @@
 
   <script>
     window.$docsify = {
-      name: 'DotNeter-Hpf\'s  Blog',
+      name: 'DotNeter-Hpf\'s Blog',
       logo: 'guide/images/hupifeng_logo.jpg',
       repo: '',
       coverpage: true, //开启封面脑功能   _coverpage.md
